--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,9 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .style-image {
-    width: 100%;
-}
-
-.style-post {
-    width: 14rem;
+    width: 30rem;
+    display: block;
+    margin: 0 auto;
 }
