--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 <div class="parallax-container center">
-  <h1 style="margin-top: 1.5em; font-size: 8em;">멍냥몽땅</h1>
+  <h1 class="pink-text" style="margin-top: 1.5em; font-size: 8em;">멍냥몽땅</h1>
   <div class="parallax"><img src="https://pixabay.com/static/uploads/photo/2010/12/13/10/20/beagle-puppy-2681_960_720.jpg"></div>
 </div>
 
