--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,8 @@
-<h3 class="center-align">Photo Upload</h3>
+<h3 class="center-align">사진 업로드</h3>
 <br>
 
 <%= render 'form' %>
 
 <div class="center-align">
-<a class="waves-effect waves-teal btn-flat"<%= link_to '목록으로', posts_path %>
+  <%= link_to '목록으로', posts_path, class: "waves-effect waves-darken btn-flat" %>
 </div>
