--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -8,12 +8,12 @@ html {
 }
 </style>
 
-<h3 class="center-align white-text " style="margin-top: 4.5em; background-color: rgba( 255, 231, 234, 0.3 )">
+<h3 class="center-align" style="margin-top: 4.5em; background-color: rgba( 255, 231, 234, 0.3 )">
   앗! 아직 작성된 멍냥프로필이 없네요.<br>사랑스런 당신의 멍냥 프로필을 작성해주세요.
 </h5>
 
 <div class="center-align">
-<a href="/profile/create" class="btn" style="margin-bottom: 10em;">작성하러 가기</a>
+  <a href="/profile/create" class="btn pink waves-effect waves-light" style="margin-bottom: 10em;">작성하러 가기</a>
 </div>
  
 
