--- a/app/views/healthnote/index.html.erb
+++ b/app/views/healthnote/index.html.erb
@@ -12,24 +12,24 @@
 
 <div class="row">
   <div class="col s10 offset-s1">
-    <div class="center" style="background-color: rgba( 255, 231, 234, 0.3 ); padding: 1em;">
+    <div class="center" style="background-color: rgba( 255, 231, 234, 0.3 ); padding: 1em; margin-top: 3em;">
       <h2>건강 수첩</h2>
       <h4>멍냥 의료정보에 대해서 기록해주세요.</h4>
     </div>
     <% if current_user.pets.empty? %>
-      <div class="center" style="margin: 6rem; background-color: rgba( 255, 231, 234, 0.3 ); padding: 1em;">
+      <div class="center" style="margin: 3rem; background-color: rgba( 255, 231, 234, 0.3 ); padding: 1em;">
         <h1>건강 수첩은 멍냥 프로필을 작성 후 사용하실 수 있습니다</h1>
       </div>
       <div class="center">
-        <a href="/profile/create" class="btn">작성하러 가기</a>
+        <a href="/profile/create" class="btn pink waves-effect waves-light">작성하러 가기</a>
       </div>
     <% else %>
       <div class="row">
         <% @my_pets.each do |item| %>
           <a href="/healthnote/note_detail/<%= item.id %>">
             <div class="col s12 m6">
-              <div class="card" style="margin: 2rem;">
-                <div class="card-image">
+              <div class="card" style="margin: 2rem; background-color: rgba(76, 175, 102, 0.29)">
+                <div class="card-image" style="margin: 1em;">
                   <img src="<%= item.img.url %>">
                   <span class="card-title" style="background-color: rgba(0,0,0,0.8); margin: 1rem; border-radius: 1em; padding: 0.3rem 2rem;"><%= item.name %></span>
                 </div>
