--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,6 @@
   
   <%= csrf_meta_tags %>
   
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style type="text/css">
 
     body { font-family:'나눔고딕'; }
@@ -76,16 +75,16 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        <h5 class="white-text">멍냥몽땅</h5>
+        <p class="grey-text text-lighten-4">반려동물 종합 웹 서비스</p>
       </div>
       <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
+        <h5 class="white-text">만든이들</h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">배윤</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">정유철</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">이현</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">이예린</a></li>
         </ul>
       </div>
     </div>
@@ -93,7 +92,6 @@
   <div class="footer-copyright">
     <div class="container">
     © 2014 Copyright Text
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
     </div>
   </div>
 </footer>
