--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,41 +1,47 @@
 <div class="row">
   <div class="col s10 offset-s1">
   
-  <h3 class="center-align">Photo list</h3>
-  <h5 class="right-align"><%= link_to '업로드', new_post_path %></h5>
-  <br>
-  
-  <table class="centered, striped">
-    <thead>
-      <tr>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-      
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-  
-    <tbody>
-      <% @posts.each do |post| %>
+    <h3 class="center-align" style="margin-top: 1em;">내 멍냥 사진</h3>
+    <div class="right">
+      <%= link_to '업로드', new_post_path, class: "btn pink waves-effect waves-light" %>
+    </div>
+    <br>
+    
+    <table class="centered, striped">
+      <thead>
         <tr>
-          <td>
-          <%= link_to  post, class: "waves-effect waves-light btn-circle" do %>보기<% end %>
-          </td>
-          <td><h5><%= post.title %></h5></td>
-          <td><%= post.content %></td>
-          <td><img class="responsive-img" style="width:140px" src="<%= post.img %>"></td>
-          <td>
-            <%= link_to '수정', edit_post_path(post), class: "waves-effect waves-teal btn-flat" %>
-            <%= link_to '삭제', post, method: :delete, data: { confirm: '정말 삭제하시겠습니까?' }, class: "waves-effect waves-teal btn-flat" %>
-          </td>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+        
+          <th colspan="3"></th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-  
-  <br>
+      </thead>
+    
+      <tbody>
+        <% @posts.each do |post| %>
+            <tr>
+              <td>
+              </td>
+              <td><h5><%= post.title %></h5></td>
+              <td><%= post.content %></td>
+              <td><img class="responsive-img" style="width:140px" src="<%= post.img %>"></td>
+              <td>
+                <%= link_to post, class: "waves-effect waves-light btn-circle pink-text" do %>상세 보기<% end %> &nbsp &nbsp &nbsp &nbsp
+                <%= link_to '수정', edit_post_path(post), class: "pink-text" %> &nbsp &nbsp &nbsp &nbsp
+                <%= link_to '삭제', post, method: :delete, data: { confirm: '정말 삭제하시겠습니까?' }, class: "pink-text" %>
+              </td>
+            </tr>
+        <% end %>
+      </tbody>
+    </table>
+    
+    <br>
+    
+    <div class="center">
+      <%= link_to '멍냥스타일로 돌아가기', "/gallery/index", class: "btn pink waves-effect waves-light" %>
+    </div>
   
   </div>
 </div>
