--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,32 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<div class="center-align">
 <div class="row">
-<div class="card-panel hoverable">
-
-            
-<p><h3>
-  <%= @post.title %>
-</h3></p>
-
-<p>
-  <%= @post.content %>
-</p>
-<p>
-  <div class="style-post">
-    <img class='style-image' src="<%= @post.img %>">
+  <div class="col s12">
+    <div class="card-panel center"> 
+      <h3>
+        <%= @post.title %>
+      </h3>
+      <p style="margin-bottom: 6em;">
+        <%= @post.content %>
+      </p>
+      <img class="hoverable style-image" src="<%= @post.img %>">
+    </div>
   </div>
-</p>
-
 </div>
 
-          </div>
-        </div>
-      </div>
-
-
-
 <div class="center-align">
-<a class="waves-effect waves-teal btn-flat"<%= link_to '수정', edit_post_path(@post) %> |
-<a class="waves-effect waves-teal btn-flat"<%= link_to '목록으로', posts_path %>
+  <%= link_to '수정', edit_post_path(@post), class: "waves-effect waves-darken btn-flat" %> |
+  <%= link_to '목록으로', posts_path, class: "waves-effect waves-darken btn-flat" %>
 </div>
