--- a/app/views/profile/pet_list.html.erb
+++ b/app/views/profile/pet_list.html.erb
@@ -1,35 +1,39 @@
-<% current_user.pets.each do |item| %>
 <div class="container">
+  <div class="center" style="background-color: rgba( 255, 231, 234, 0.3 ); padding: 1em; margin-top: 3em;">
+    <h2>멍냥 프로필</h2>
+  </div>
+  <% current_user.pets.each do |item| %>
     <div class="devise_block">
-        <div class="field">
-            <img src="<%= item.img.url %>" height="200">
-        </div>    
-    
-        <div class="field">
-            <label>이름</label>
-            <%=item.name%>
+      <div class="row">
+        <div class="col s12 l6">
+          <img src="<%= item.img.url %>" style="height: 15em;">
         </div>
-    
-        <div class="field">
-            <label>성별</label>
-            <%=item.gender%>
+        <div class="col s12 l6">
+          <div class="profile_content">
+            <span>이름: </span><%=item.name%>
+          </div>
+      
+          <div class="profile_content">
+            <span>성별: </span><%=item.gender%>
+          </div>
+      
+          <div class="profile_content">
+            <span>생일: </span><%=Time.parse(item.birth).strftime("%Y, %m, %d")%>
+          </div>
+      
+          <div class="profile_content">
+            <span>소개: </span>
+            <%= simple_format item.about%>
+          </div>
         </div>
-    
-        <div class="field">
-            <label>생일</label>
-            <%=Time.parse(item.birth).strftime("%Y, %m, %d")%>
-        </div>
-
-        <div class="field">
-            <label>소개</label>
-            <textarea><%=item.about%></textarea>
-        </div>
-
-
+      </div>
+      <div class="center">
+        <a class="btn pink waves-effect waves-light" href="/profile/edit/<%= item.id %>" style="margin-bottom: 0.5em;">수정하기</a><br>
+        <%= link_to '프로필 삭제','/profile/destroy/'+item.id.to_s, data: {confirm: "정말 프로필을 지우시겠습니까?"}, class: "pink-text" %>
+      </div>
     </div>
+  <% end %>
 </div>
-<a href="/profile/edit/<%= item.id %>"><button>수정하기</button></a>
-<%= link_to '지우기','/profile/destroy/'+item.id.to_s, data: {confirm: "지우시겠습니까?"} %>
-
-<% end %>
-<a href="/profile/create"><button>나의 멍냥 추가하기</button></a>
+<div class="center">
+  <a class="btn pink waves-effect waves-light" href="/profile/create">나의 멍냥 추가하기</a>
+</div>
