--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -17,7 +17,7 @@
                 </div>
                 <div class="card-content">
                   <p><%= item.content %></p>
-                  <% if user_signed_in? %>
+                  <% if user_signed_in? && UserPost.where(user: current_user, post: item ).take %>
                     <br>
                     <p class="like_p">
                     <% if UserPost.where(user: current_user, post: item ).take.liked %>
