--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -11,10 +11,12 @@
           <% Post.all.reverse.each do |item| %>
             <div class="col s4 l3">
               <div class="gallery_img card hoverable blue lighten-4">
-                <div class="card-image">
-                  <a class="modal-trigger" href="#post_img<%= item.id %>" ><img src="<%= item.img %>"></a>
-                  <span class="card-title"><%= item.title %></span>
-                </div>
+                <a class="modal-trigger" href="#post_img<%= item.id %>" >
+                  <div class="card-image">
+                    <img src="<%= item.img %>">
+                    <span class="card-title"><%= item.title %></span>
+                  </div>
+                </a>
                 <div class="card-content">
                   <p><%= item.content %></p>
                   <% if user_signed_in? %>
