--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -7,9 +7,9 @@
     
     <div class="row" style="margin-top: 2em;">
       <div class="col s12">
-        <div class="row">
+        <div class="gallery_row">
           <% Post.all.reverse.each do |item| %>
-            <div class="col s4 l3">
+            <div class="gallery_col">
               <div class="gallery_img card hoverable blue lighten-4">
                 <a class="modal-trigger" href="#post_img<%= item.id %>" >
                   <div class="card-image">
@@ -89,5 +89,10 @@ $(document).ready(function(){
     $('.modal-trigger').leanModal();
   });
   
+  $('#container').pinto();
+
 });
 </script>
+
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="pinto.js"></script>
